    (Only when git-annex is installed using the prebuilt binaries
    from git-annex upstream, not from eg Debian.)
  * assistant: Detect when the git-annex binary is modified or replaced,
    and either prompt the user to restart the program, or automatically
    restart it.
  * annex.autoupgrade configures both the above upgrade behaviors.

 -- Joey Hess <joeyh@debian.org>  Wed, 20 Nov 2013 18:30:47 -0400

git-annex (5.20131120) unstable; urgency=low

  * Fix Debian package to not try to run test suite, since haskell-tasty
    is not out of new or in Build-Depends yet.
  * dropunused, addunused: Allow "all" instead of a range to
    act on all unused data.
  * Ensure execute bit is set on directories when core.sharedrepository is set.
  * Ensure that core.sharedrepository is honored when creating the .git/annex
    directory.
  * Improve repair code in the case where the index file is corrupt,
    and this hides other problems from git fsck.

 -- Joey Hess <joeyh@debian.org>  Wed, 20 Nov 2013 12:54:18 -0400

git-annex (5.20131118) unstable; urgency=low

  * Direct mode repositories now have core.bare=true set, to prevent
    accidentally running git commands that try to operate on the work tree,
    and so do the wrong thing in direct mode.
  * annex.version is now set to 5 for direct mode repositories.
    This upgrade is handled fully automatically, no need to run
    git annex upgrade
  * The "status" command has been renamed to "info", to allow
    "git annex status" to be used in direct mode repositories, now that
    "git status" won't work in them.
  * The -c option now not only modifies the git configuration seen by
    git-annex, but it is passed along to every git command git-annex runs.
  * watcher: Avoid loop when adding a file owned by someone else fails
    in indirect mode because its permissions cannot be modified.
  * webapp: Avoid encoding problems when displaying the daemon log file.