@@ -9,6 +9,8 @@ git-annex (5.20131121) UNRELEASED; urgency=low
     and either prompt the user to restart the program, or automatically
     restart it.
   * annex.autoupgrade configures both the above upgrade behaviors.
+  * Fix bug that broke switching between local repositories
+    in the webapp when they use the new guarded direct mode.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 20 Nov 2013 18:30:47 -0400
 
